Upgrade test cases