@@ -1,8 +1,6 @@
 package com.hz;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.dataformat.xml.XmlMapper;
-import com.fasterxml.jackson.module.jaxb.JaxbAnnotationModule;
+import com.hz.configuration.TestEnphaseSystemInfoConfig;
 import com.hz.metrics.Metric;
 import com.hz.models.envoy.json.System;
 import com.hz.models.envoy.xml.EnvoyInfo;
@@ -15,20 +13,21 @@ import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.cloud.contract.wiremock.AutoConfigureWireMock;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Import;
+import org.springframework.context.annotation.Primary;
 import org.springframework.core.env.Environment;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.web.client.RestTemplate;
 
-import java.io.IOException;
 import java.math.BigDecimal;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 @SpringBootTest
 @AutoConfigureWireMock(port = 0,stubs="classpath:/stubs/D4.5.79")
+@Import(TestEnphaseSystemInfoConfig.class)
 @ActiveProfiles("testing")
 class EnphaseServiceRest_4_5_79_Test {
 
@@ -42,16 +41,9 @@ class EnphaseServiceRest_4_5_79_Test {
 		private RestTemplateBuilder restTemplateBuilder;
 
 		@Bean
-		public EnvoyInfo envoyInfo() {
-			try {
-				ObjectMapper xmlMapper = new XmlMapper();
-				xmlMapper.registerModule(new JaxbAnnotationModule());
-
-				String infoXml = "<?xml version='1.0' encoding='UTF-8'?>\n<envoy_info>\n  <time>1555161655</time>\n  <device>\n    <sn>121703XXXXXX</sn>\n    <pn>800-00554-r03</pn>\n    <software>D4.5.79</software>\n        <euaid>4c8675</euaid>\n        <seqnum>0</seqnum>\n        <apiver>1</apiver>\n        <imeter>true</imeter>\n      </device>\n      <package name='rootfs'>\n        <pn>500-00001-r01</pn>\n        <version>02.00.00</version>\n        <build>938</build>\n      </package>\n      <package name='kernel'>\n        <pn>500-00011-r01</pn>\n        <version>04.00.00</version>\n        <build>7f6b66</build>\n      </package>\n      <package name='boot'>\n        <pn>590-00018-r01</pn>\n        <version>02.00.01</version>\n        <build>426697</build>\n      </package>\n      <package name='app'>\n        <pn>500-00002-r01</pn>\n        <version>04.05.79</version>\n        <build>08d137</build>\n      </package>\n      <package name='devimg'>\n        <pn>500-00005-r01</pn>\n        <version>01.02.51</version>\n        <build>904bfb</build>\n      </package>\n      <package name='geo'>\n        <pn>500-00008-r01</pn>\n        <version>02.01.20</version>\n        <build>f9825d</build>\n      </package>\n      <package name='backbone'>\n        <pn>500-00010-r01</pn>\n        <version>04.05.88</version>\n        <build>fd85aa</build>\n      </package>\n      <package name='meter'>\n        <pn>500-00013-r01</pn>\n        <version>03.02.02</version>\n        <build>90fa32</build>\n      </package>\n      <package name='agf'>\n        <pn>500-00012-r01</pn>\n        <version>02.02.00</version>\n        <build>9f04db</build>\n      </package>\n      <package name='full'>\n        <pn>500-00001-r01</pn>\n        <version>02.00.00</version>\n        <build>938</build>\n      </package>\n      <package name='security'>\n        <pn>500-00016-r01</pn>\n        <version>02.00.00</version>\n        <build>54a6dc</build>\n      </package>\n    </envoy_info>";
-				return (EnvoyInfo) xmlMapper.readValue(infoXml, EnvoyInfo.class);
-			} catch (IOException e) {
-				return new EnvoyInfo(e.getMessage(),"");
-			}
+		@Primary
+		String mockEnvoyInfo() {
+			return "<?xml version='1.0' encoding='UTF-8'?>\n<envoy_info>\n  <time>1555161655</time>\n  <device>\n    <sn>121703XXXXXX</sn>\n    <pn>800-00554-r03</pn>\n    <software>D4.5.79</software>\n        <euaid>4c8675</euaid>\n        <seqnum>0</seqnum>\n        <apiver>1</apiver>\n        <imeter>true</imeter>\n      </device>\n      <package name='rootfs'>\n        <pn>500-00001-r01</pn>\n        <version>02.00.00</version>\n        <build>938</build>\n      </package>\n      <package name='kernel'>\n        <pn>500-00011-r01</pn>\n        <version>04.00.00</version>\n        <build>7f6b66</build>\n      </package>\n      <package name='boot'>\n        <pn>590-00018-r01</pn>\n        <version>02.00.01</version>\n        <build>426697</build>\n      </package>\n      <package name='app'>\n        <pn>500-00002-r01</pn>\n        <version>04.05.79</version>\n        <build>08d137</build>\n      </package>\n      <package name='devimg'>\n        <pn>500-00005-r01</pn>\n        <version>01.02.51</version>\n        <build>904bfb</build>\n      </package>\n      <package name='geo'>\n        <pn>500-00008-r01</pn>\n        <version>02.01.20</version>\n        <build>f9825d</build>\n      </package>\n      <package name='backbone'>\n        <pn>500-00010-r01</pn>\n        <version>04.05.88</version>\n        <build>fd85aa</build>\n      </package>\n      <package name='meter'>\n        <pn>500-00013-r01</pn>\n        <version>03.02.02</version>\n        <build>90fa32</build>\n      </package>\n      <package name='agf'>\n        <pn>500-00012-r01</pn>\n        <version>02.02.00</version>\n        <build>9f04db</build>\n      </package>\n      <package name='full'>\n        <pn>500-00001-r01</pn>\n        <version>02.00.00</version>\n        <build>938</build>\n      </package>\n      <package name='security'>\n        <pn>500-00016-r01</pn>\n        <version>02.00.00</version>\n        <build>54a6dc</build>\n      </package>\n    </envoy_info>";
 		}
 
 		@Bean
@@ -61,7 +53,7 @@ class EnphaseServiceRest_4_5_79_Test {
 					.setConnectTimeout(Duration.ofSeconds(5))
 					.setReadTimeout(Duration.ofSeconds(30))
 					.build();
-			result.setMessageConverters(Arrays.asList(new MappingJackson2HttpMessageConverter()));
+			result.setMessageConverters(List.of(new MappingJackson2HttpMessageConverter()));
 			return result;
 		}
 
@@ -72,7 +64,7 @@ class EnphaseServiceRest_4_5_79_Test {
 					.setConnectTimeout(Duration.ofSeconds(5))
 					.setReadTimeout(Duration.ofSeconds(30))
 					.build();
-			result.setMessageConverters(Arrays.asList(new MappingJackson2HttpMessageConverter()));
+			result.setMessageConverters(List.of(new MappingJackson2HttpMessageConverter()));
 			return result;
 		}
 	}
