@@ -1,5 +1,6 @@
 package com.hz.configuration;
 
+import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.fasterxml.jackson.module.jaxb.JaxbAnnotationModule;
@@ -13,7 +14,7 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 @TestConfiguration
 @Profile("testing")
@@ -31,6 +32,8 @@ public class TestEnphaseSystemInfoConfig {
 		try {
 			ObjectMapper xmlMapper = new XmlMapper();
 			xmlMapper.registerModule(new JaxbAnnotationModule());
+			xmlMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, true);   // We want to fail on unknown properties, so we can test new releases
+
 			return xmlMapper.readValue(mockEnvoyInfo, EnvoyInfo.class);
 		} catch (IOException e) {
 			return new EnvoyInfo(e.getMessage(),e.getMessage());
@@ -40,7 +43,7 @@ public class TestEnphaseSystemInfoConfig {
 	@Bean
 	@Primary
 	public HttpMessageConverters messageConverters() {
-		return new HttpMessageConverters(false, Arrays.asList(new MappingJackson2HttpMessageConverter()));
+		return new HttpMessageConverters(false, List.of(new MappingJackson2HttpMessageConverter()));
 	}
 
 }
